@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.5-3.008
-Date: 2025-11-12
+Version: 3.5-3.009
+Date: 2025-11-14
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -65,7 +65,7 @@ Authors@R: c(person("Adrian", "Baddeley",
              person("Tingting", "Zhan",
 	            role="ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 3.1-8), spatstat.univar (>= 3.1-4), spatstat.geom (>= 3.6), spatstat.random (>= 3.4), stats, graphics, grDevices, utils, methods, nlme
+Depends: R (>= 3.5.0), spatstat.data (>= 3.1-8), spatstat.univar (>= 3.1-4.003), spatstat.geom (>= 3.6), spatstat.random (>= 3.4), stats, graphics, grDevices, utils, methods, nlme
 Imports: spatstat.utils (>= 3.2), spatstat.sparse (>= 3.1), goftest (>= 1.2-2), Matrix, abind
 Suggests: sm, gsl, locfit, spatial, fftwtools (>= 0.9-8), spatstat.linnet (>= 3.3), spatstat.model (>= 3.4), spatstat (>= 3.4)
 Description: Functionality for exploratory data analysis and nonparametric analysis of
