@@ -17,4 +17,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2025-07-20" "3.5-0" 242 562 0 34429 6364
 "2025-07-22" "3.5-2" 242 564 0 34447 6364
 "2025-09-22" "3.5-3" 242 565 0 34506 6364
-"2025-11-12" "3.5-3.008" 245 573 0 34737 6364
+"2025-11-14" "3.5-3.009" 245 573 0 34785 6364
