@@ -1,5 +1,5 @@
 
-        CHANGES IN spatstat.explore VERSION 3.5-3.008
+        CHANGES IN spatstat.explore VERSION 3.5-3.009
 
 OVERVIEW
 
@@ -19,6 +19,12 @@ NEW FUNCTIONS
 
     o tolcon
     Tolerance contours for spatial relative risk.
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o markcorr, markconnect, markvario, Emark, Vmark
+    The result now has an attribute 'smooth.args'
+    containing the smoothing parameters used.
 
 BUG FIXES
 
